# prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  benchmark_abstention.json  benchmark_diag.json  benchmark_results.json  benchmark_retry.json  docker-compose.yml  pyproject.toml  run_benchmarks.sh  scratch.md
.claude/commands/: gap-analysis.md  new-feature.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TODOS.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-storage-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-ingestion-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/02.1-scope-isolation-fix/: 02.1-01-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: __init__.py  __main__.py  datasets.py  epistemic.py  llm_judge.py  locomo.py  longmemeval.py  metrics.py  models.py  report.py  runner.py
benchmarks/results/: baseline.json  lme_v18_full.json  lme_v19_research.json  lme_v19b_fix.json  lme_v20.json  lme_v21.json  lme_v22_cards.json  lme_v23_agg.json  locomo_real.json  locomo_v18_full.json  locomo_v18_reranker.json  locomo_v19_research.json  locomo_v19b_pairs.json  locomo_v20.json  locomo_v20b.json  locomo_v21_obs.json  locomo_v22_cards.json  locomo_v24_multihop.json  longmemeval_real.json  longmemeval_real_sample.json  phase1_2.json
docs/: INDEX.md  INTEGRATION.md  Portable_Relational_Memory_Engine_Technical_Spec.md  RESEARCH-AGENDA.md  RFC-0000-Suite-Overview.md  RFC-0001-Core-Data-Model.md  RFC-0002-Event-Store.md  RFC-0003-Epistemic-State-Model.md  RFC-0004-Namespace-and-Scope-Isolation.md  RFC-0005-Hybrid-Retrieval-Pipeline.md  RFC-0006-Retrieval-Cost-and-Context-Efficiency.md  RFC-0007-Decay-and-Forgetting.md  RFC-0008-Confidence-Evolution.md  RFC-0009-Memory-Usage-Feedback-Loop.md  RFC-0010-Temporal-Pattern-Awareness.md  RFC-0011-Multi-Agent-Memory-Semantics.md  RFC-0012-Memory-Branching-and-Simulation.md  RFC-0013-Intent-and-Goal-Memory.md  RFC-0014-Portability-Sync-and-Federation.md  RFC-0015-Self-Organizing-Memory.md  RFC_0001_PRME_Technical_Spec.md  RFC_0002_RMS_Git_Sync_Profile_v1.md  RMS_PRME_Scientific_Audit_Report.md
documentation/: README.md  async-engine.md  cli.md  concepts.md  configuration.md  deployment.md  getting-started.md  http-api.md  mcp-server.md  memory-client.md
examples/: chat.py  conftest.py  integration_test.py  quickstart.py  simple.py
research/: BENCHMARK_RESULTS.md  EVALUATION.md  HARDENING_PLAN.md  LANDSCAPE_2025.md  LLM_GENERATION_LAYER.md  RESEARCH_STATE.md  RETRIEVAL_FIXES.md  __init__.py
research/narrative/: __init__.py  document.py  rewriter.py
research/tests/: test_narrative.py  test_vsa_benchmark.py  test_vsa_codebook.py  test_vsa_core.py  test_vsa_memory.py  test_vsa_temporal.py
research/vsa/: __init__.py  codebook.py  core.py  memory.py  temporal.py
scripts/: download_benchmarks.py  run_simulations.py
simulations/: README.md  __init__.py  __main__.py  eval_runner.py  evaluation.py  harness.py  run.py
simulations/scenarios/: __init__.py  bi_temporal.py  changing_facts.py  consolidation.py  decay_mechanics.py  deduplication.py  dual_stream.py  entity_snapshots.py  eval_retrieval.py  information_accumulation.py  oscillation.py  procedural_memory.py  quality_tuning.py  reinforcement.py  remention.py  summarization.py  surprise_gating.py  ttl_archival.py
src/prme/: __init__.py  cli.py  client.py  config.py  types.py
tests/: conftest.py  test_aggregation_retrieval.py  test_api.py  test_benchmarks.py  test_bi_temporal.py  test_cli.py  test_client.py  test_concurrency.py  test_config_expansion.py  test_consolidation.py  test_context_formatter.py  test_contradiction.py  test_contradiction_modeling.py  test_deduplication.py  test_dual_stream.py  test_e2e_wiring_fixes.py  test_encryption.py  test_entity_snapshots.py  test_evaluation.py  test_foundation_decay.py  test_integrations_langchain.py  test_integrations_llamaindex.py  test_mcp.py  test_novelty.py  test_organizer.py  test_oscillation.py  test_pg_event_store.py  test_pg_graph_store.py  test_pg_integration.py  test_pg_lexical_index.py  test_pg_vector_index.py  test_prime_enhancements.py  test_procedural_memory.py  test_quality.py  test_reinforcement.py  test_remention.py  test_reranker.py  test_retrieval_filter_forwarding.py  test_retrieval_scoring.py  test_scope_expansion.py  (+10 more)
(+142 files in other folders)
