[project]
name = "prme"
version = "0.1.0"
description = "Portable Relational Memory Engine - local-first memory substrate for LLM-powered systems"
readme = "README.md"
authors = [
    { name = "dwamianm", email = "mcleish@cornersix.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "usearch>=2.16.0",
    "tantivy>=0.22.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.9",
    "fastembed>=0.7.4",
    "structlog",
    "pytz>=2025.2",
    "instructor>=1.14",
    "openai>=2.20",
    "anthropic>=0.80",
    "ollama>=0.6",
    "dateparser>=1.2",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
