[project]
name = "prme"
version = "0.4.0"
description = "Portable Relational Memory Engine - local-first memory substrate for LLM-powered systems"
readme = "README.md"
authors = [
    { name = "Dwamian McLeish", email = "dwamian@journey.ly" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["memory", "llm", "ai", "knowledge-graph", "vector-search", "event-sourcing", "duckdb", "agents", "rag", "long-term-memory", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=1.2.0",
    "usearch>=2.16.0",
    "tantivy>=0.22.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.9",
    "fastembed>=0.7.4",
    "structlog",
    "pytz>=2025.2",
    "instructor>=1.14",
    "openai>=2.20",
    "anthropic>=0.80",
    "ollama>=0.6",
    "dateparser>=1.2",
    "cryptography>=43.0",
]

[project.urls]
Homepage = "https://github.com/dwamianm/prism"
Documentation = "https://github.com/dwamianm/prism/tree/main/docs"
Repository = "https://github.com/dwamianm/prism"
Issues = "https://github.com/dwamianm/prism/issues"
Changelog = "https://github.com/dwamianm/prism/blob/main/CHANGELOG.md"

[project.scripts]
prme = "prme.cli:main"

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "stress: load and stress tests (deselect with '-m not stress')",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
